# kNN-classifier

./: .gitignore  CMakeLists.txt  README.md
notebooks/: analysis.ipynb  exp.ipynb  experimentation.ipynb  requirements.txt  utils.py
notebooks/res/: KFold_K_PCA.csv  KFold_K_kNN.csv  LOOCV_PCA.csv  LOOCV_kNN.csv  PCA_alpha2.csv  PCA_component_values.csv  kNN-acc-kfixed.csv  kNN-acc-kvariable.csv  kNN_PCA_k6_alpha43.csv  kNN_PCA_k_alpha_variable.csv  kNN_PCA_k_alpha_variable_log.csv  kNN_k6.csv  kNN_k_fixed.csv  kNN_k_inv_proportional.csv  kNN_k_linspace.csv  kNN_k_logspace.csv  kNN_k_proportional.csv  kNN_k_size.csv  kNN_perf_k_fixed.csv  kNN_perf_k_proportional.csv  tsne_PCA_100.csv  tsne_PCA_2.csv  tsne_PCA_50.csv  tsne_PCA_alpha5.csv  tsne_n2.csv  tsne_n2p.csv  tsne_n3.csv
src/: eigen.cpp  eigen.hpp  kNN-pybind11.cpp  kNN.cpp  kNN.hpp  main.cpp  pca.cpp  pca.hpp  types.hpp
